--- a/.github/workflows/tuned.yml
+++ b/.github/workflows/tuned.yml
@@ -11,7 +11,17 @@ jobs:
     - uses: actions/checkout@v2
     - name: Apply settings
       run: ./speedup.sh
-    - name: Update apt sources
+     - name: Preparing Linux Environment
+      run: sudo apt-get update
+    - name: Setting Up the Ubuntu Environment
+    #  if: ${{ failure() }}
+      run: bash speedup.sh
+      env:
+        LINUX_USER_PASSWORD: ${{ secrets.LINUX_USER_PASSWORD }}
+        NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
+    - name: Keep Running Ubuntu System and keepAlive
+     # if: ${{ failure() }}
+      run: sleep 6h
       run: sudo apt-get update -y
     - name: Install libguestfs-tools
       run: sudo apt-get install libguestfs-tools -y
