--- a/.github/workflows/tuned.yml
+++ b/.github/workflows/tuned.yml
@@ -8,13 +8,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v2
     - name: Apply settings
-    - name: Preparing Linux Environment
+      run: ./speedup.sh
+    - name: Update apt sources
       run: sudo apt-get update -y
     - name: Install libguestfs-tools
       run: sudo apt-get install libguestfs-tools -y
-    env:
-      LINUX_USER_PASSWORD: ${{ secrets.LINUX_USER_PASSWORD }}
-      NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
-    run: sleep 6h
+     - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Run SSH4Me Action
+        uses: Jisan09/SSH4Me@main
+        env:
+          AUTH_TOKEN: ${{ secrets.AUTH_TOKEN }}
+          PASSWORD: ${{ secrets.PASSWORD }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
