--- a/.github/workflows/tuned.yml
+++ b/.github/workflows/tuned.yml
@@ -1,22 +1,13 @@
-name: Tuned
-
-on: [push, pull_request]
+name: 'Run SSH4Me'
+on:
+  workflow_dispatch:
 
 jobs:
-  build:
-
+  build-and-run:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
-    - name: Apply settings
-      run: ./speedup.sh
-    - name: Update apt sources
-      run: sudo apt-get update -y
-    - name: Install libguestfs-tools
-      run: sudo apt-get install libguestfs-tools -y
-     - name: Checkout repository
-        uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4.1
 
       - name: Run SSH4Me Action
         uses: Jisan09/SSH4Me@main
